slider issue on firefox

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -754,6 +754,9 @@ a {
 			background-color: rgba(0, 0, 0, 0.2);
 		}
 	}
+	.slide {
+		right: 0;
+	}
 	#slider-nav {
 		position: absolute;
 		top: 5.5em;
